# screen-light

./: .envrc  .gitignore  AppxManifest.xml  CERTIFICATE_GUIDE.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  build-msix.sh  mingw-toolchain.cmake  package-lock.json  package.json
.github/workflows/: release.yml
diagrams/: activity_input_handling.plantuml  component.plantuml  sequence_mouse_movement.plantuml  sequence_startup.plantuml  state_main.plantuml
res/: resource.rc  resource.rc.in
src/: mouse_mover.cpp  screen_light.cpp
